Plugin Directory: Prevent screenshot captions overflowing their container.
Props dufresnesteven.
Fixes #4888.


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@9679 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-plugins/client/components/plugin/sections/screenshots/style.scss
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-plugins/client/components/plugin/sections/screenshots/style.scss
@@ -14,7 +14,13 @@
 		text-transform: inherit;
 	}
 
+	.image-gallery-content {
+		display: table;
+		width: 100%;
+	}
+
 	.image-gallery-slides {
+		display: table-cell;
 		max-height: 600px;
 	}
 
